k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rmu-api-npcs-service
spec:
  selector:
    app: rmu-api-npcs
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3007
  type: ClusterIP
